# mlops_frauddetection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  data.dvc  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: README.md  config.yaml
data/: README.md
dockerfiles/: Dockerfile  README.md
docs/: PHASE1.md  PHASE2.md  PHASE3.md  README.md  api.md  getting_started.md  index.md  mkdocs.yml
models/: .gitignore  LR_SMOTE_model_metadata.json  README.md  RGhazzal_lightgbm_metadata.json  RGhazzal_logistic_regression_metadata.json  RGhazzal_random_forest_metadata.json  RGhazzal_xgboost_metadata.json  lightgbm.pkl  lightgbm_20260507.joblib.dvc  logistic_regression.pkl  logistic_regression_20260507.joblib.dvc  lr_balanced_20260506.joblib.dvc  lr_smote_20260506.joblib.dvc  preprocessor.pkl  preprocessor_20260507.joblib.dvc  random_forest_20260507.joblib.dvc  xgboost.pkl  xgboost_20260507.joblib.dvc
notebooks/: 1.0-Musaddiq-logistic-regression.ipynb  1.0-lohith-data-exploration.ipynb  1.0-nishanthshastry-data-sample.ipynb  1.0-rghazzal-machine-learning-models.ipynb  README.md  RGhazzal_ML_Models_v1.ipynb
reports/: README.md  phase1-data-exploration-report.md
src/mlops_frauddetection/: __init__.py  config.py  logging_config.py  predict_model.py  train_model.py
src/mlops_frauddetection/data/: __init__.py  loaders.py  make_dataset.py
src/mlops_frauddetection/evaluation/: __init__.py  (+1 more)
tests/: README.md  conftest.py  test_model.py
(+10 files in other folders)
